--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "json-server-prod",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node api/index.js"
+    "start": "node ./server.js"
   },
   "keywords": [],
   "author": "",
